care/force-app/main/default/objects/Community_Setting__mdt/fields/Case_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_ID__c</fullName>
    <label>Case Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>