care/force-app/main/default/objects/Community_Setting__mdt/fields/Community_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_ID__c</fullName>
    <label>Community ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>