care/force-app/main/default/objects/Community_Setting__mdt/fields/For_Families_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>For_Families_Link_URL__c</fullName>
    <label>For Families Link URL</label>
    <type>Url</type>
</CustomField>