care/force-app/main/default/objects/Community_Setting__mdt/fields/For_Marketing_Solutions_Link__c.field-meta.xml
<CustomField>
    <fullName>For_Marketing_Solutions_Link__c</fullName>
    <label>For Marketing Solutions Link</label>
    <type>Url</type>
</CustomField>