care/force-app/main/default/objects/Community_Setting__mdt/fields/For_Recruiting_Solutions_Link__c.field-meta.xml
<CustomField>
    <fullName>For_Recruiting_Solutions_Link__c</fullName>
    <label>For Recruiting Solutions Link</label>
    <type>Url</type>
</CustomField>