care/force-app/main/default/objects/Community_Setting__mdt/fields/Join_Now_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Join_Now_Link_URL__c</fullName>
    <label>Join Now Link URL</label>
    <type>Url</type>
</CustomField>