care/force-app/main/default/objects/Community_Setting__mdt/fields/Log_In_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Log_In_Link_URL__c</fullName>
    <label>Log In Link URL</label>
    <type>Url</type>
</CustomField>