care/force-app/main/default/objects/Community_Setting__mdt/fields/Show_Chat__c.field-meta.xml
<CustomField>
    <fullName>Show_Chat__c</fullName>
    <inlineHelpText>Indicates which member types can start Chats in this community.</inlineHelpText>
    <label>Show Chat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>