care/force-app/main/default/objects/Community_Setting__mdt/fields/Show_Chat_Lang__c.field-meta.xml
<CustomField>
    <fullName>Show_Chat_Lang__c</fullName>
    <inlineHelpText>Contains a semi-colon delimited list of locales (see Sterling Country Settings CMD for definitive list of locales).  A blank value means that all languages are allowed.</inlineHelpText>
    <label>Show Chat / Lang</label>
    <length>75</length>
    <type>Text</type>
</CustomField>