care/force-app/main/default/objects/Community_Setting__mdt/fields/Show_Email__c.field-meta.xml
<CustomField>
    <fullName>Show_Email__c</fullName>
    <inlineHelpText>Indicates which member types can send Email in this community.</inlineHelpText>
    <label>Show Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>