care/force-app/main/default/objects/Community_Setting__mdt/fields/Show_For_Recruiting_Solutions_Link__c.field-meta.xml
<CustomField>
    <fullName>Show_For_Recruiting_Solutions_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show For Recruiting Solutions Link</label>
    <type>Checkbox</type>
</CustomField>