care/force-app/main/default/objects/Community_Setting__mdt/fields/Upgrade_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Link_URL__c</fullName>
    <label>Upgrade Link URL</label>
    <type>Url</type>
</CustomField>