care/force-app/main/default/objects/Community_Setting__mdt/fields/Use_Article_Whitelist_for_Web_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Article_Whitelist_for_Web_Cases__c</fullName>
    <inlineHelpText>We usually control whether the Web Form is shown if the user matches the Member Account Type listed on the &quot;Show Email&quot; field.  

This field expands on that logic for Basics.  If this field is enabled, Basics won&apos;t be able to use the Web Form unless they are in a Whitelisted Article.

Supported values are Locales.  Multiple may be provided separated by semicolons.

Locales that are included in the list, will use the Article Whitelist.  Locales not listed will use the default logic.</inlineHelpText>
    <label>Use Article Whitelist for Web Cases</label>
    <length>20</length>
    <type>Text</type>
</CustomField>