care/force-app/main/default/objects/Community_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Member_Type__c</columns>
    <columns>Show_Chat__c</columns>
    <columns>Show_Chat_Lang__c</columns>
    <columns>Show_Email__c</columns>
    <columns>Use_Article_Whitelist_for_Web_Cases__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>